--- a/templates/applications/die-tray.hbs
+++ b/templates/applications/die-tray.hbs
@@ -4,5 +4,7 @@
     {{else}}
         <button id="player-dice-roll" class="flex2">Player Roll</button>
     {{/if}}
-        <button id="hope-dice-roll" class="hide flex-sm" >Roll Hope</button>
+    
+        <button id="hope-dice-roll" class="flex-sm" >Roll Hope</button>
+    
 </section>
