--- a/templates/applications/truths.hbs
+++ b/templates/applications/truths.hbs
@@ -1,5 +1,5 @@
 <form class="cgridcol" id="truths-container">
-    <h2 class="centered">These things are true...</h2>
+    <h2 class="centered header">These things are true...</h2>
 
     
     <div class="item-list">
