--- a/templates/applications/player-hud.hbs
+++ b/templates/applications/player-hud.hbs
@@ -1,6 +1,6 @@
 <div class="flexrow survivor-hud">
     {{#each actors as |actor id|}}
-    <div class="flex1 survivor {{#if actor.onBrink}}on-brink{{/if}} {{#if actor.overBrink}}over-brink{{/if}}" id="survivor_{{actor.id}}">
+    <div class="flex1 survivor {{#if actor.onBrink}}on-brink{{/if}} {{#if actor.overBrink}}over-brink{{/if}} {{#if actor.system.hope.value}}has-hope{{/if}}" id="survivor_{{actor.id}}">
         <div class="survivor-img"><img src="{{actor.img}}" title="{{actor.name}}" height="64"/></div>
         <div class="name">{{actor.name}}</div>
         <div class="card-data">
