--- a/templates/applications/die-tray.hbs
+++ b/templates/applications/die-tray.hbs
@@ -1,4 +1,5 @@
-<section class="tenc-dice-tray flexrow">
+<section class="tenc-dice-tray" style="margin-bottom:5px;">
+    <div class="flexrow" style="margin-bottom:5px;" >
     {{#if isGM}}
         <button id="gm-dice-roll" class="flex2">GM Roll</button>
     {{else}}
@@ -6,5 +7,7 @@
     {{/if}}
     
         <button id="hope-dice-roll" class="flex-sm" >Roll Hope</button>
-    
+    </div>
+        <button id="ones-dice-roll" >Reroll 1s</button>
+
 </section>
