updated features for consistancy

--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,11 @@ html {
     color: var(--color-underline-header);
 }
 
+.tc-hope {
+    color: black;
+    background-color: rgba(255, 255, 255, 0.842);
+}
+
 .tc-subtitle {
     font-style: italic;
 }
